# istio-wasm-filter

./: Cargo.toml  Dockerfile  README.md  httpbin-vs-gateway.yaml  wasm-plugin.yaml
src/: lib.rs
