[package]
name = "istio-http-filter"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
log = "0.4.21"
proxy-wasm = "0.2.1"
wasm-bindgen = "0.2"
reqwest_wasi = { version = "0.11.16", features = ["blocking", "json"] }


[package.metadata.wasm-pack.profile.release]
wasm-opt = false

